# cpp_test

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DIRECTORY_USAGE.md  Dockerfile  MULTI_LIBRARY_GUIDE.md  PROJECT_STRUCTURE.md  README.md  conanfile.py  conanfile.txt
.devcontainer/: .pre-commit-config.yaml  Dockerfile  README.md  devcontainer.json  entrypoint.sh  initialize.sh  on-create.sh  post-create.sh
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt
apps/main/: CMakeLists.txt
apps/main/src/: main.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
cmake/: CppTemplateConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/advanced_features/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  simple_calculator.cpp
examples/tutorials/: CMakeLists.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/cpptemplate/core/: config.hpp  exception.hpp  logger.hpp
libs/core/src/: config.cpp  exception.cpp  logger.cpp
libs/math/: CMakeLists.txt
libs/math/include/cpptemplate/math/: calculator.hpp  matrix.hpp
libs/math/src/: calculator.cpp  matrix.cpp
libs/network/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/include/cpptemplate/utils/: string_utils.hpp
libs/utils/src/: string_utils.cpp
scripts/: build.sh  format.sh  lint.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/core/: calculator.cpp  calculator.hpp  logger.cpp  logger.hpp
src/utils/: string_utils.cpp  string_utils.hpp
tests/: CMakeLists.txt  test_calculator.cpp  test_logger.cpp  test_string_utils.cpp
tests/core/: test_logger.cpp
tests/integration/: test_performance.cpp
tests/math/: test_calculator.cpp
tests/utils/: test_string_utils.cpp
